infrastructure/istio-ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: istio-gateway
    labels:
        pod-security.kubernetes.io/enforce: privileged
        pod-security.kubernetes.io/enforce-version: latest
