infrastructure/istio-ingress/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    name: gateway
    namespace: istio-ingress
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/private-key-size: 4096
        cert-manager.io/private-key-rotation-policy: Always
spec:
    gatewayClassName: istio
    listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
              namespaces:
                  from: All
        - name: root-https
          protocol: HTTPS
          port: 443
          hostname: ratsinthe.cloud
          allowedRoutes:
              namespaces:
                  from: All
          tls:
              mode: Terminate
              certificateRefs:
                  - name: ratsinthe-cloud-tls
        - name: wildcard-https
          protocol: HTTPS
          port: 443
          hostname: "*.ratsinthe.cloud"
          allowedRoutes:
              namespaces:
                  from: All
          tls:
              mode: Terminate
              certificateRefs:
                  - name: ratsinthe-cloud-tls
        - name: bittorrent
          protocol: TCP
          port: 42069
          allowedRoutes:
              kinds:
                  - kind: TCPRoute
              namespaces:
                  from: All
