infrastructure/istio-ingress/redirect-to-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: redirect-to-https
    namespace: istio-ingress
spec:
    parentRefs:
        - name: gateway
          namespace: istio-ingress
          sectionName: http
    rules:
        - filters:
              - type: RequestRedirect
                requestRedirect:
                    scheme: https
                    statusCode: 301
